--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-dataset/.DS_Store
-.DS_Store
-dataset/users.csv
-dataset/recommendations.csv
+*.DS_Store
+datasets/users.csv
+datasets/recommendations.csv
+datasets/pre_recommendations.csv
+*.pkl
